# reins

./: .env.example  .gitignore  CLAUDE.md  README.md  TODOS.md  deploy.sh  dev.sh  docker-compose.yml  local_run.sh
deploy/: README.md  agent.sh  reins-deploy-agent.service
docs/: CEO-PLAN.md  jonghahwang-no-git-eng-review-test-plan-20260628-132738.md  schema.sql  tasks-ceo-review.jsonl  tasks-design-review-20260628-135243.jsonl  tasks-eng-review-20260628-132738.jsonl
docs/designs/: DESIGN-SYSTEM.md  mockup-reins.html
server/: Dockerfile  migrate.py  pyproject.toml
server/app/: config.py  deps.py  main.py
server/app/agent/: service.py  watchdog.py
server/app/api/: agent.py  comments.py  decisions.py  deploy.py  ops.py  projects.py  telegram.py  tickets.py
server/app/auth/: token.py
server/app/comment/: service.py
server/app/core/: database.py
server/app/core/notify/: digest.py  dispatcher.py  notifier.py  provisioner.py  router.py  telegram.py  topic_parser.py
server/app/decision/: github_merge.py  service.py
server/app/deploy/: __init__.py  service.py
server/app/ticket/: service.py  state.py
server/app/workflow/: registry.py
server/tests/: test_agent.py  test_decision_automation.py  test_decisions.py  test_deploy.py  test_dispatcher.py  test_notify_router.py  test_notify_telegram.py  test_sprint_epics.py  test_state.py  test_telegram_webhook.py  test_ticket_notify.py  test_topic_parser.py
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  (+2 more)
(+9 files in other folders)
